test/fail/function_missing_param_type.m8
ᚠbroken᛬ᚮvalue᛬ᚭ᛬ᛰ᛬
    ᚷvalue
